# black_hole_share

./: .gitignore  Cargo.toml  README.md
html/: BlackHole.html  style.css
src/: img_mgt.rs  main.rs  text_mgt.rs  ws.rs
templates/: display_image.html.tera  display_text.html.tera
