[package]
name = "black_hole_share"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
anyhow = "1.0.98"
futures = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
uuid = { version = "1.17.0", features = ["v4"] }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tree_magic_mini = "3.1.6"
